--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Homework 10</title>
   </head>
   <body>
-    <select id="breed-select"></select>
+    <select id="breed-select" hidden></select>
     <p class="loader">Loading data, please wait...</p>
     <p class="error">Oops! Something went wrong! Try reloading the page!</p>
     <div class="cat-info"></div>
